# cv_intermediate

./: .gitignore  CMakeLists.txt  README.md  Report.tex  script.sh
include/: features_extractor.h  features_matcher.h  graphic.h  perfomance_metrics.h  performance_metrics.h  utils.h
lib/: CMakeLists.txt  features_extractor.cpp  graphic.cpp  performance_metrics.cpp  utils.cpp
src/: EsOpencv.cpp  Template_matching.cpp  contours.cpp  filtered_com.cpp  filtered_com_parse_input.cpp  filtered_com_with_slider.cpp  kmeans.cpp  main.cpp  mean_shift.cpp  metrics.txt  orb.cpp  out  output_label.txt  pred_label.txt  prova  script.sh  segm.cpp  temp  test.cpp  test1.cpp  tmp2.cpp  tmp3.cpp
